feat: update promethues settings for second service, update auth controller to use form data
